# _wp

./: .vercelignore  README.md  陳宇霆06.md
homework/: .gitignore
homework/01/js/: hello.js
homework/02/: Questionnaire  README.md  package-lock.json  package.json  server.js
homework/03/: README.md  about.html
homework/04/: 01-isEven.js  02-FizzBuzz.js  03-multiplication.js  04-calculate.js  05-age.js  06-inventory.js  07-converter.js  08-findLongestWord.js  09-score.js  10-everseNumber.js  README.md
homework/05/: README.md
homework/05/_doc/: blog-ai-chat.md  blog-code-detail.md  blog-summary.md  opencode_memory.md
homework/05/blog/: database.js  package.json  server.js
homework/05/blog1/: database.js  package-lock.json  package.json  server.js
homework/05/blog2/: database.js  package.json  server.js
homework/05/blog3/: database.js  package-lock.json  server.js
homework/05/blog5/: cookies.txt  server.js
homework/05/blog6/: database.js  server.js
homework/06/: 1  10  2  3  4  5  6  7  8  9  README.md
homework/07/: 1.js  10.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js  README.md
homework/08/: README.md  hello.rs
homework/midterm/: CONVERSATION.md  README.md
homework/midterm/fastapi-server/: main.py
homework/midterm/game/: index.html  script.js  style.css
homework/midterm/next-app/: package-lock.json  package.json
homework/midterm/node-server/: leaderboard.json  package-lock.json  package.json  server.js
homework/midterm/rust-server/: Cargo.toml
homework/midterm/rust-server/src/: main.rs
homework/期末/: README.md  index.html
(+37 files in other folders)
